--- a/src/app/features/auth/login/login.component.scss
+++ b/src/app/features/auth/login/login.component.scss
@@ -1,9 +1,1 @@
-.remember {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-  label {
-    color: #fff;
-  }
-}
+@import url('../../../../styles/auth/auth-base.scss')
